--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0"
   },
