--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/numeral": "^2.0.5",
     "antd": "^5.11.0",
     "axios": "^1.6.1",
+    "clsx": "^2.1.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
