--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.1",
     "clsx": "^2.1.0",
+    "lottie-react": "^2.4.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
