--- a/.github/workflows/deployment-staging.yml
+++ b/.github/workflows/deployment-staging.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Lint Code
+        run: yarn lint
+
+      - name: Type check
+        run: tsc
+        
       - name: build app
         run: yarn build
 
