--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,18 @@
 {
-  "extends":[
+  "extends": [
     "eslint:recommended",
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
-    "prettier","next/core-web-vitals"
+    "prettier",
+    "next/core-web-vitals"
   ],
-  "rules":{
+  "rules": {
     "no-console": 1,
-    "@next/next/no-async-client-component":1,
-    "@next/next/no-duplicate-head":1,
-    "import/named": 0
-    
+    "@next/next/no-async-client-component": 1,
+    "@next/next/no-duplicate-head": 1,
+    "import/named": 0,
+    "no-unused-vars": 0
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
