--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,11 @@
     "@next/next/no-async-client-component": 1,
     "@next/next/no-duplicate-head": 1,
     "import/named": 0,
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "jsx-a11y/click-events-have-key-events":0,
+    "a11y/no-static-element-interactions": "off",
+    "jsx-a11y/interactive-supports-focus":"off"
+
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
