--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.1",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
     "lottie-react": "^2.4.0",
     "next": "14.0.1",
     "react": "^18",
@@ -31,9 +32,11 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.0.4",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
