--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-otp-input": "^3.1.1",
+    "react-phone-number-input": "^3.3.9",
     "react-redux": "^9.0.4",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
