--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.1",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.5",
     "lottie-react": "^2.4.0",
     "next": "14.0.1",
     "react": "^18",
