--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-otp-input": "^3.1.1",
     "react-phone-number-input": "^3.3.9",
     "react-redux": "^9.0.4",
+    "swiper": "^11.0.6",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
     "xlsx": "^0.18.5"
